// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DebugHistoryMiddleware > correctly handles async updates 1`] = `
{
  "0_q1": [
    {
      "dispatchedUpdate": {
        "type": "Promise",
        "value": Promise {},
      },
      "initialState": {
        "type": "Value",
        "value": "FOO",
      },
      "isCanceled": false,
      "source": "Async-Dispatch",
      "stackTrace": undefined,
      "time": 1600000000100,
      "updateID": "6",
    },
    {
      "dispatchedUpdate": {
        "type": "Function",
        "value": [Function],
      },
      "initialState": {
        "type": "Value",
        "value": "FOO",
      },
      "isCanceled": false,
      "source": "Function-Dispatch",
      "stackTrace": undefined,
      "time": 1600000000200,
      "updateID": "7",
    },
    {
      "dispatchedUpdate": {
        "type": "Promise",
        "value": Promise {},
      },
      "initialState": {
        "type": "Value",
        "value": "FOO",
      },
      "isCanceled": false,
      "source": "Function-Dispatch",
      "stackTrace": undefined,
      "time": 1600000000300,
      "updateID": "7",
    },
    {
      "dispatchedUpdate": {
        "type": "Value",
        "value": "BAR",
      },
      "initialState": {
        "type": "Value",
        "value": "FOO",
      },
      "isCanceled": false,
      "source": "Async-Dispatch",
      "stackTrace": undefined,
      "time": 1600000000400,
      "updateID": "6",
    },
    {
      "dispatchedUpdate": {
        "type": "Value",
        "value": "BAZ",
      },
      "initialState": {
        "type": "Value",
        "value": "BAR",
      },
      "isCanceled": false,
      "source": "Function-Dispatch",
      "stackTrace": undefined,
      "time": 1600000000500,
      "updateID": "7",
    },
  ],
}
`;

exports[`DebugHistoryMiddleware > correctly handles procedures 1`] = `
{
  "0_q1": [],
  "1_q2": [
    {
      "dispatchedUpdate": {
        "type": "Value",
        "value": {
          "loading": false,
          "value": undefined,
        },
      },
      "initialState": {
        "type": "Value",
        "value": {
          "loading": false,
          "value": undefined,
        },
      },
      "isCanceled": false,
      "source": "Sync-Dispatch",
      "stackTrace": undefined,
      "time": 1600000000100,
      "updateID": "9",
    },
    {
      "dispatchedUpdate": {
        "type": "AsyncGenerator",
        "value": [Function],
      },
      "initialState": {
        "type": "Value",
        "value": {
          "loading": false,
          "value": undefined,
        },
      },
      "isCanceled": false,
      "source": "Async-Generator-Dispatch",
      "stackTrace": undefined,
      "time": 1600000000200,
      "updateID": "11",
    },
    {
      "dispatchedUpdate": {
        "type": "Function",
        "value": [Function],
      },
      "initialState": {
        "type": "Value",
        "value": {
          "loading": false,
          "value": undefined,
        },
      },
      "isCanceled": false,
      "source": "Async-Generator-Dispatch",
      "stackTrace": undefined,
      "time": 1600000000300,
      "updateID": "11",
    },
    {
      "dispatchedUpdate": {
        "type": "Value",
        "value": {
          "loading": true,
          "value": undefined,
        },
      },
      "initialState": {
        "type": "Value",
        "value": {
          "loading": false,
          "value": undefined,
        },
      },
      "isCanceled": false,
      "source": "Async-Generator-Dispatch",
      "stackTrace": undefined,
      "time": 1600000000400,
      "updateID": "11",
    },
    {
      "dispatchedUpdate": {
        "type": "Function",
        "value": [Function],
      },
      "initialState": {
        "type": "Value",
        "value": {
          "loading": true,
          "value": undefined,
        },
      },
      "isCanceled": false,
      "source": "Async-Generator-Dispatch",
      "stackTrace": undefined,
      "time": 1600000000500,
      "updateID": "11",
    },
    {
      "dispatchedUpdate": {
        "type": "Value",
        "value": {
          "loading": true,
          "value": "foo",
        },
      },
      "initialState": {
        "type": "Value",
        "value": {
          "loading": true,
          "value": undefined,
        },
      },
      "isCanceled": false,
      "source": "Async-Generator-Dispatch",
      "stackTrace": undefined,
      "time": 1600000000600,
      "updateID": "11",
    },
    {
      "dispatchedUpdate": {
        "type": "Value",
        "value": {
          "loading": false,
          "value": "bar",
        },
      },
      "initialState": {
        "type": "Value",
        "value": {
          "loading": true,
          "value": "foo",
        },
      },
      "isCanceled": false,
      "source": "Async-Generator-Dispatch",
      "stackTrace": undefined,
      "time": 1600000000700,
      "updateID": "11",
    },
  ],
}
`;

exports[`DebugHistoryMiddleware > correctly saves updates to the history tracker 1`] = `
{
  "0_q1": [
    {
      "dispatchedUpdate": {
        "type": "Value",
        "value": "BAR",
      },
      "initialState": {
        "type": "Value",
        "value": "FOO",
      },
      "isCanceled": false,
      "source": "Sync-Dispatch",
      "stackTrace": undefined,
      "time": 1600000000100,
      "updateID": "3",
    },
    {
      "dispatchedUpdate": {
        "type": "Function",
        "value": [Function],
      },
      "initialState": {
        "type": "Value",
        "value": "BAR",
      },
      "isCanceled": false,
      "source": "Function-Dispatch",
      "stackTrace": undefined,
      "time": 1600000000200,
      "updateID": "4",
    },
    {
      "dispatchedUpdate": {
        "type": "Value",
        "value": "BAZ",
      },
      "initialState": {
        "type": "Value",
        "value": "BAR",
      },
      "isCanceled": false,
      "source": "Function-Dispatch",
      "stackTrace": undefined,
      "time": 1600000000300,
      "updateID": "4",
    },
  ],
}
`;
